# artifacts/api-server/src/routes/v1/index.ts
@@ -1,8 +1,10 @@
 import { Router, type IRouter } from "express";
 import workflowsRouter from "./workflows";
+import executionsRouter from "./executions";
 
 const router: IRouter = Router();
 
 router.use("/workflows", workflowsRouter);
+router.use("/executions", executionsRouter);
 
 export default router;
